# otus-cpp-04-editor

./: .gitignore
.github/workflows/: release.yml
src/: CMakeLists.txt  main.cpp
